// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package designcompose.definition.layout;

import "definition/layout/layout_style.proto";

option java_multiple_files = true;
option java_package = "com.android.designcompose.definition.layout";
option optimize_for = LITE_RUNTIME;

// A representation of a Figma node to register for layout.
message LayoutNode {
  int32 layout_id = 1;
  int32 parent_layout_id = 2;
  int32 child_index = 3;
  LayoutStyle style = 4;
  string name = 5;
  bool use_measure_func = 6;
  optional int32 fixed_width = 7;
  optional int32 fixed_height = 8;
}

// A parent node id and a list of child ids
message LayoutParentChildren {
  int32 parent_layout_id = 1;
  repeated int32 child_layout_ids = 2;
}
