syntax = "proto3";

package com.android.designcompose.proto.design;

import "design/layout_style.proto";
import "design/node_style.proto";

option java_multiple_files = true;

message ViewStyle {
  LayoutStyle layout_style = 1;
  NodeStyle node_style = 2;
}
